Add statistics service
