# src/user_service/openapi.yml
@@ -213,6 +213,50 @@ paths:
           description: User unauthorized
         '404':
           description: User not found
+  /like:
+    post:
+      security:
+        - bearerAuth: []
+      summary: Like post
+      operationId: likePost
+      parameters:
+        - name: post
+          in: query
+          description: Post id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Post successfully liked
+        '400':
+          description: Bad Request
+        '401':
+          description: User unauthorized
+        '404':
+          description: User not found
+  /view:
+    post:
+      security:
+        - bearerAuth: []
+      summary: View post
+      operationId: viewPost
+      parameters:
+        - name: post
+          in: query
+          description: Post id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Post successfully viewed
+        '400':
+          description: Bad Request
+        '401':
+          description: User unauthorized
+        '404':
+          description: User not found
 components:
   securitySchemes:
     bearerAuth:
